fix: update spacing and gap

--- a/src/Promotions/BFCM/resources/css/bfcm2025.scss
+++ b/src/Promotions/BFCM/resources/css/bfcm2025.scss
@@ -101,7 +101,7 @@
         font-size: 0.875rem;
         line-height: 1;
         border-radius: 36px;
-        margin-top: .5rem;
+        margin-top: 1rem;
         background: #F29718;
         color: #fff;
         text-decoration: none;
